fixes made to simplify automated testing

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -3,14 +3,15 @@
 # ---
 # common labels
 common.ComputedSource=Computed Source
-common.SQL=SQL
 common.FormatSQL=Format SQL
+common.SQL=SQL
 common.add.button=Add
 common.apply.button=Apply
 common.cancel.button=Cancel
 common.clear.button=Clear
 common.close.button=Close
 common.columns=Columns
+common.confirmation-request=Exit without saving changes?
 common.connect.button=Connect
 common.connection=Connection
 common.constraints=Constraints
@@ -32,8 +33,10 @@ common.drivers=Drivers
 common.encoding=Encoding
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
+common.fetched=Count fetched
 common.finish.button=Finish
 common.generate.button=Generate
+common.get-rows-count=Get rows count
 common.help.button=Help
 common.indexes=Indexes
 common.key=Key
@@ -43,6 +46,7 @@ common.mode=Mode
 common.move=Move
 common.name=Name
 common.newConnection.button=New Connection
+common.no.button=No
 common.ok.button=OK
 common.parameter=Parameter
 common.parameters=Parameters
@@ -61,9 +65,7 @@ common.subtype=Subtype
 common.table=Table
 common.test.button=Test
 common.value=Value
-common.fetched=Count fetched
-common.get-rows-count=Get rows count
-common.confirmation-request=Exit without saving changes?
+common.yes.button=Yes
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
@@ -719,6 +721,8 @@ ConnectionPanel.ConnectionParameters=Connection parameters:
 ConnectionPanel.Create=Create
 ConnectionPanel.CreateDatabase=Create Database
 ConnectionPanel.DatabaseDefault=Database Default
+ConnectionPanel.DatabaseRegistration=Database Registration
+ConnectionPanel.DatabaseRegistration.message=Register a created database?
 ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
 ConnectionPanel.IsolationLevel=Isolation Level:
@@ -791,6 +795,7 @@ ConnectionsTreePanel.error.delete-object=An error occurred removing the selected
 ConnectionsTreePanel.message.confirm-delete-connection=Are you sure you want to delete the connection {0}?
 ConnectionsTreePanel.message.confirm-delete-folder=Are you sure you want to delete the folder {0}?\nAny connections within this folder will also be deleted.
 ConnectionsTreePanel.message.confirm-delete-object=Are you sure you want to drop
+ConnectionsTreePanel.title.confirm-delete-connection=Delete connection
 ConnectionsTreeToolBar.collapseAll=Collapse all
 ConnectionsTreeToolBar.moveConnectionDown=Move connection down
 ConnectionsTreeToolBar.moveConnectionUp=Move connection up
