fixed translation of headers in the dependency panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -836,8 +836,8 @@ DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indexes
 DatabaseTableNode.primary-keys=Primary Keys
-DependenciesPanel.dependedOn=Depended On
-DependenciesPanel.dependent=Dependent
+DependenciesPanel.dependedOn=Objects, that {0} depends on
+DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
 DockedTabPane.menuItem.minimize=Minimize
 DockedTabPane.menuItem.minimizeAll=Minimize All
