--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -836,8 +836,8 @@ DatabaseTableNode.columns=Столбцы
 DatabaseTableNode.foreign-keys=Внешние ключи
 DatabaseTableNode.indexes=Индексы
 DatabaseTableNode.primary-keys=Первичные ключи
-DependenciesPanel.dependedOn=Объекты БД от которых зависит объект
-DependenciesPanel.dependent=Зависимые от объекта
+DependenciesPanel.dependedOn=Объекты БД от которых зависит {0}
+DependenciesPanel.dependent=Объекты зависящие от {0}
 DockedTabPane.menuItem.close=Закрыть
 DockedTabPane.menuItem.minimize=Уменьшить
 DockedTabPane.menuItem.minimizeAll=Уменьшить все
