Added saving paths to Java in the user directory of the RedExpert settings(on Windows)

--- a/installer/localization/install_props_ru.lng
+++ b/installer/localization/install_props_ru.lng
@@ -1,2 +1,4 @@
 Installer.Parameter.java_home.description=Расположение java
 Installer.Parameter.java_home.explanation=Выберите расположение Java на вашем компьютере или скачайте java https://www.java.com/ru/download/manual.jsp и перезапустите установку
+Installer.Parameter.settings_dir.description=Каталог настроек
+Installer.Parameter.settings_dir.explanation=Выбор каталога, в котором будут храниться пользовательские настройки
