--- a/installer/localization/install_props_en.lng
+++ b/installer/localization/install_props_en.lng
@@ -1,2 +1,4 @@
 Installer.Parameter.java_home.description=Path to Java
 Installer.Parameter.java_home.explanation=Choose a path to Java or download Java from https://www.java.com/ru/download/manual.jsp and then restart the installation
+Installer.Parameter.settings_dir.description=Settings directory
+Installer.Parameter.settings_dir.explanation=Select the directory in which the user settings of the application will be stored
