Add note about Java search at RedExpert startup (see #49630)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -57,7 +57,17 @@ Red Expert обладает рядом полезных компонентов: 
 \begin{tikzpicture}
 \pgftext{\includegraphics[width=14pt]{img/red_expert.png}} at (0pt,0pt)
 \end{tikzpicture}
-на рабочем столе. Приложение Red Expert можно запускать.
+на рабочем столе. 
+
+\item Запустите Red Expert. 
+
+\begin{redremark}
+Если при запуске приложению не удастся найти путь установки Java, то пользователю будет предложено выбрать путь вручную, либо запустить автоматическое скачивание Java:
+\begin{itemize}[leftmargin=15pt]
+	\item На Linux системах для автоматического скачивания Java должен быть установлен пакет \ttt{libcurl4}.
+	\item На Windows для автоматического скачивания Java нужно отключить усиленную безопасность InternetExplorer.
+\end{itemize}
+\end{redremark}
 \end{enumerate}	
 
 \newpage
