--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -65,7 +65,7 @@ Red Expert обладает рядом полезных компонентов: 
 Если при запуске приложению не удастся найти путь установки Java, то пользователю будет предложено выбрать путь вручную, либо запустить автоматическое скачивание Java:
 \begin{itemize}[leftmargin=15pt]
 	\item На Linux системах для автоматического скачивания Java должен быть установлен пакет \ttt{libcurl4}.
-	\item На Windows для автоматического скачивания Java нужно отключить усиленную безопасность InternetExplorer.
+	\item На Windows Server для автоматического скачивания Java нужно отключить усиленную безопасность InternetExplorer.
 \end{itemize}
 \end{redremark}
 \end{enumerate}	
