--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -21,7 +21,7 @@ Red Expert обладает рядом полезных компонентов: 
 \begin{enumerate}[leftmargin=15pt]
 	\item Установите JDK не ниже 1.8.
 	\item Скачайте дистрибутив Red Expert для соответствующей операционной системы и ее разрядности с официального сайта СУБД Ред Базы Данных --- \href{http://reddatabase.ru/downloads/redexpert/}{reddatabase.ru}. Загрузка доступна только авторизованному пользователю. 
-	\item Запустите установку Red Expert с помощью файла \ttt{red\_expert\_installer-1.0.6-xxxxxx}. Инсталляция Red Expert осуществляется с помощью стандартного мастера установки программ. 
+	\item Запустите установку Red Expert с помощью файла \ttt{red\_expert\_installer-<версия>-xxxxxx}. Инсталляция Red Expert осуществляется с помощью стандартного мастера установки программ. 
 	
 	В начале Вам предложат выбрать язык установки. Предусмотрена установка на русском и английском языках. Далее Вы увидите подобные окна:
 
