See #52284 add node SYSTEM_ROLE. Also make cosmetic changes and fix the error with closing the connection after commit

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1012,6 +1012,7 @@ NamedObject.SYSTEM_DOMAIN=SYSTEM DOMAINS
 NamedObject.SYSTEM_FUNCTIONS=SYSTEM FUNCTIONS
 NamedObject.SYSTEM_INDEX=SYSTEM INDEXES
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=SYSTEM NUMERIC FUNCTIONS
+NamedObject.SYSTEM_ROLE=SYSTEM ROLES
 NamedObject.SYSTEM_STRING_FUNCTIONS=SYSTEM STRING FUNCTIONS
 NamedObject.SYSTEM_TABLE=SYSTEM TABLES
 NamedObject.SYSTEM_TRIGGER=SYSTEM TRIGGERS
