--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1012,6 +1012,7 @@ NamedObject.SYSTEM_DOMAIN=СИСТЕМНЫЕ ДОМЕНЫ
 NamedObject.SYSTEM_FUNCTIONS=СИСТЕМНЫЕ ФУНКЦИИ
 NamedObject.SYSTEM_INDEX=СИСТЕМНЫЕ ИНДЕКСЫ
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=СИСТЕМНЫЕ ЧИСЛОВЫЕ ФУНКЦИИ
+NamedObject.SYSTEM_ROLE=СИСТЕМНЫЕ РОЛИ
 NamedObject.SYSTEM_STRING_FUNCTIONS=СИСТЕМНЫЕ СТРОКОВЫЕ ФУНКЦИИ
 NamedObject.SYSTEM_TABLE=СИСТЕМНЫЕ ТАБЛИЦЫ
 NamedObject.SYSTEM_TRIGGER=СИСТЕМНЫЕ ТРИГГЕРЫ
