--- a/installer/localization/install_props_ru.lng
+++ b/installer/localization/install_props_ru.lng
@@ -1,7 +1,1 @@
-Installer.Parameter.java_home.description=Расположение java
-Installer.Parameter.java_home.explanation=Выберите расположение Java на вашем компьютере или скачайте java https://www.java.com/ru/download/manual.jsp и перезапустите установку
-Installer.Parameter.settings_dir.description=Каталог настроек
-Installer.Parameter.settings_dir.explanation=Выбор каталога, в котором будут храниться пользовательские настройки
-Installer.Parameter.java_home.error.not_found=По указанному пути java не найдена.
-Installer.Parameter.java_home.error.min_version=Недопустимая версия java ${java_version}. Минимальная версия java ${min_java_version}
-Installer.Parameter.java_home.error.bitness=Недопустимая разрядность java: ${java_arch}.\n Требуемая разрядность: ${check_java_version}.
+Installer.Parameter.question_remove_props=Желаете ли Вы также удалить пользовательские настройки?
