See #53902 add support collation for data types

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -10,6 +10,7 @@ common.apply.button=Apply
 common.cancel.button=Cancel
 common.clear.button=Clear
 common.close.button=Close
+common.collate=Collation
 common.columns=Columns
 common.confirmation-request=Exit without saving changes?
 common.connect.button=Connect
