--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -10,6 +10,7 @@ common.apply.button=Применить
 common.cancel.button=Отмена
 common.clear.button=Очистить
 common.close.button=Закрыть
+common.collate=Сортировка
 common.columns=Столбцы
 common.confirmation-request=Выйти без сохранения?
 common.connect.button=Подключиться
