localization: 1. desktop localization 2. localization of the Query Editor (Part 1) 3. localization of the connection panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -12,6 +12,7 @@ common.clear.button=Clear
 common.close.button=Close
 common.collate=Collation
 common.columns=Columns
+common.confirmation=Confirmation
 common.confirmation-request=Exit without saving changes?
 common.connect.button=Connect
 common.connection=Connection
@@ -34,6 +35,7 @@ common.drivers=Drivers
 common.encoding=Encoding
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
+common.error-message=Error message
 common.fetched=Count fetched
 common.finish.button=Finish
 common.generate.button=Generate
@@ -704,9 +706,10 @@ CatalogPanel.AvailableSchemas=Available Schemas
 CatalogPanel.DatabaseCatalog=Database Catalog
 CatalogPanel.SchemaName=Schema Name
 CatalogPanel.catalogName=Catalog Name:
-CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.checkingUpdatesMessage=Checking for updated version
 CheckForUpdateNotifier.checkingUpdatesTitle=Check for update
+CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
+CheckForUpdateNotifier.updateAvailable=Update available
 ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
 ColumnIndexTableModel.Non-Unique=Non-Unique
@@ -722,8 +725,8 @@ ConnectionPanel.ConnectionParameters=Connection parameters:
 ConnectionPanel.Create=Create
 ConnectionPanel.CreateDatabase=Create Database
 ConnectionPanel.DatabaseDefault=Database Default
-ConnectionPanel.DatabaseRegistration=Database Registration
 ConnectionPanel.DatabaseRegistration.message=Register a created database?
+ConnectionPanel.DatabaseRegistration=Database Registration
 ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
 ConnectionPanel.IsolationLevel=Isolation Level:
@@ -742,6 +745,9 @@ ConnectionPanel.advPropsPanel.text1=Enter any key/value pair properties for this
 ConnectionPanel.advPropsPanel.text2=Refer to the relevant JDBC driver documentation for possible entries
 ConnectionPanel.advTxPanel.Text1=Default transaction isolation level for this connection
 ConnectionPanel.advTxPanel.Text2=Note: the selected isolation level will apply to ALL open connections of this type.
+ConnectionPanel.borderTitle=Connect Using an SSH Tunnel
+ConnectionPanel.certLabel=Certificate file X.509 (CER, DER):
+ConnectionPanel.contLabel=Container password:
 ConnectionPanel.delete.tool-tip=Clear this key/value pair
 ConnectionPanel.driverField.tool-tip=The JDBC driver to be used for this database
 ConnectionPanel.driverField=JDBC Driver:
@@ -779,6 +785,7 @@ ConnectionPanel.userField.tool-tip=Login user name
 ConnectionPanel.userField=User Name:
 ConnectionPanel.warning.DataSourceException.level-change=The selected isolation level could not be applied.\nThe JDBC driver returned:\n\n
 ConnectionPanel.warning.level-change=The specified driver for this connection does not support transactions.\nThis feature is unavailable.
+ConnectionProgressDialog.connectionLabel=Establishing connection to {0}
 ConnectionsListPanel.AvailableConnections=Available Connections
 ConnectionsListPanel.ConnectionName=Connection Name
 ConnectionsListPanel.DataSource=Data Source
@@ -837,6 +844,7 @@ DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indexes
 DatabaseTableNode.primary-keys=Primary Keys
+DefaultConnectionListener.activeConns=Active Data Sources: {0}
 DependenciesPanel.dependedOn=Objects, that {0} depends on
 DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
@@ -859,8 +867,8 @@ ExecuteSqlScriptPanel.error.file-not-exist=The selected file does not exists in 
 ExecuteSqlScriptPanel.error.load-file=Unable to load an input file
 ExecuteSqlScriptPanel.error.select-input-file=Please select an input file
 ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the process significantly)
-ExecuteSqlScriptPanel.title=Execute SQL Script
 ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
+ExecuteSqlScriptPanel.title=Execute SQL Script
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
@@ -881,6 +889,7 @@ FeedbackPanel.noRemarksErrorMessage=Please enter your remarks in the text area p
 FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
+GUIUtilities.notAuthorized=not authorized
 GeneratorTestDataPanel.AfterCommit=Commit after
 GeneratorTestDataPanel.Autoincrement=Autoincrement
 GeneratorTestDataPanel.ChooseDirectory=Choose Directory
@@ -1026,6 +1035,37 @@ OpenFrameCommand.error.notConnected=Not Connected.\nPlease connect to continue.
 PrintPreviewCommand.done=Done
 PropertyWrapperModel.property=Property
 PropertyWrapperModel.value=Value
+QueryEditor.Filter=Filter:
+QueryEditor.MaxRows.tool-tip=Enable/disable max records
+QueryEditor.MaxRows=Max Rows:
+QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
+QueryEditor.StopOnError=Stop on error
+QueryEditor.TransactionIsolationLevel=Transaction isolation level:
+QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
+QueryEditorToolBar.comment-lines-command=Comment/Uncomment
+QueryEditorToolBar.commit-command=Commit all changes since last commit/rollback
+QueryEditorToolBar.editor-conn-change-command=Closes the editor's connection and retrieves another from the pool
+QueryEditorToolBar.editor-export-command=Export the selected result set to file
+QueryEditorToolBar.editor-format-sql-command=Format SQL
+QueryEditorToolBar.editor-next-command=Next Statement
+QueryEditorToolBar.editor-previous-command=Previous Statement
+QueryEditorToolBar.editor-refresh-autocomplete-command=Refresh editor's schema autocomplete list
+QueryEditorToolBar.editor-rs-metadata-command=Display this result set's meta data
+QueryEditorToolBar.editor-show-hide-rs-columns-command=Show/hide result set columns
+QueryEditorToolBar.editor-stop-command=Cancel Current Statement
+QueryEditorToolBar.execute-at-cursor-command=Execute query at cursor
+QueryEditorToolBar.execute-command=Execute the contents of the query editor
+QueryEditorToolBar.execute-script-command=Execute SQL Script
+QueryEditorToolBar.execute-selection-command=Execute the current text selection
+QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
+QueryEditorToolBar.print-plan-command=Print plan for query
+QueryEditorToolBar.query-bookmarks=Query Bookmarks
+QueryEditorToolBar.rollback-command=Rollback all changes since last commit/rollback
+QueryEditorToolBar.shift-text-left-command=Shift line/selection left
+QueryEditorToolBar.shift-text-right-command=Shift line/selection right
+QueryEditorToolBar.sql-history-command=SQL command history
+QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
+QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
@@ -1038,6 +1078,7 @@ ScrollingTabPane.menuItem.closeAll=Close All
 ScrollingTabPane.menuItem.closeOther=Close Others
 SimpleButtonsPanel.cancel=Cancel
 SimpleButtonsPanel.ok=OK
+SystemOutputPanel.title=Output Console
 TableSelectionPanel.catalog=Catalog:
 TableSelectionPanel.connection=Connection:
 TableSelectionPanel.schema=Schema:
