Changed the arrangement of components on the desktop to improve usability

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -16,10 +16,12 @@ common.confirmation=Confirmation
 common.confirmation-request=Exit without saving changes?
 common.connect.button=Connect
 common.connection=Connection
+common.connecting=Connecting...
 common.constraints=Constraints
 common.copy.button=Copy
 common.copy=Copy
 common.create.button=Create
+common.cut=Cut
 common.data-type=Data Type
 common.data=Data
 common.database-browser=Database Browser
@@ -53,6 +55,7 @@ common.no.button=No
 common.ok.button=OK
 common.parameter=Parameter
 common.parameters=Parameters
+common.paste=Paste
 common.print.button=Print
 common.privileges=Privileges
 common.properties=Properties
@@ -305,6 +308,7 @@ menu.window=Window
 # -----------------------------------------------------
 # Preferences
 # -----------------------------------------------------
+preferences.AddAction=Add Action
 preferences.AddSeparator=Add Separator
 preferences.AlternatingRowBackground=Alternating row background
 preferences.Appearance=Appearance
@@ -731,12 +735,16 @@ ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
 ConnectionPanel.IsolationLevel=Isolation Level:
 ConnectionPanel.JDBCProperties=JDBC Properties
+ConnectionPanel.Multifactor=Multifactor
 ConnectionPanel.PageSize=Page Size:
 ConnectionPanel.Role=Role:
 ConnectionPanel.SSHTunnel=SSH Tunnel
+ConnectionPanel.path_to_html=org/executequery/gui/browser/resource/ssh-tunnel.html
 ConnectionPanel.ShowPassword.tool-tip=Show the password in plain text
 ConnectionPanel.ShowPassword=Show Password
 ConnectionPanel.Standard=Standard
+ConnectionPanel.Store-container-password=Store container password
+ConnectionPanel.Verify-server-certificate=Verify server certificate
 ConnectionPanel.StorePassword.tool-tip=Store the password with the connection information
 ConnectionPanel.StorePassword=Store Password
 ConnectionPanel.TransactionIsolation=Transaction Isolation
@@ -1174,3 +1182,9 @@ WindowAddUser.error.failed-edit-user=Failed to edit user {0}
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+QueryEditorPopupMenu.execute=Execute
+QueryEditorPopupMenu.execute-selection-command=Execute Selected Query Text
+QueryEditorPopupMenu.execute-as-block-command=Execute as Single Statement
+QueryEditorPopupMenu.cancelQuery=Cancel Query
+QueryEditorPopupMenu.commit=Commit
+QueryEditorPopupMenu.rollback=Rollback
