localization: 1.Query Editor 2.Trace Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -937,6 +937,7 @@ GeneratorTestDataPanel.getFromList=Get from list
 GeneratorTestDataPanel.getFromOtherTable=Get from other table
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
+GrantManagerPanel.Refresh=Refresh
 GrantManagerPanel.AllObjects=All Objects
 GrantManagerPanel.CancelFill=Cancel waiting fill 
 GrantManagerPanel.ColumnsOf=Columns Of 
@@ -1049,6 +1050,9 @@ QueryEditor.MaxRows=Max Rows:
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
 QueryEditor.StopOnError=Stop on error
 QueryEditor.TransactionIsolationLevel=Transaction isolation level:
+QueryEditor.title=Query Editor
+QueryEditor.script=script
+QueryEditor.autocommit=Auto-commit={0}
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
 QueryEditorToolBar.comment-lines-command=Comment/Uncomment
 QueryEditorToolBar.commit-command=Commit all changes since last commit/rollback
@@ -1074,6 +1078,7 @@ QueryEditorToolBar.shift-text-right-command=Shift line/selection right
 QueryEditorToolBar.sql-history-command=SQL command history
 QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
 QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
+QueryEditorResultsPanel.title=Output
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
@@ -1128,6 +1133,7 @@ TraceManagerPanel.UseConfigFile=Use Config File
 TraceManagerPanel.User=User
 TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
+TraceManagerPanel.title=Trace Manager
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
 UserManagerPanel.AddUser=Add user
@@ -1188,3 +1194,11 @@ QueryEditorPopupMenu.execute-as-block-command=Execute as Single Statement
 QueryEditorPopupMenu.cancelQuery=Cancel Query
 QueryEditorPopupMenu.commit=Commit
 QueryEditorPopupMenu.rollback=Rollback
+QueryEditorPopupMenu.preferences=Preferences...
+QueryEditorPopupMenu.clear-output-log=Clear Output Log
+QueryEditorPopupMenu.auto-complete-keywords=Auto-complete keywords
+QueryEditorPopupMenu.auto-complete-database-objects=Auto-complete database objects
+QueryEditorPopupMenu.editor.execute.remove.comments=Remove comments for execution
+QueryEditorPopupMenu.editor.display.toolsPanel=Display tools panel
+QueryEditorPopupMenu.results.table.row.numbers=Show row number header 
+QueryEditorPopupMenu.use-single-resut-set-tab=Use single resut set tab
