localization 1.ERD 2.Updating 3.Other

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -12,11 +12,11 @@ common.clear.button=Clear
 common.close.button=Close
 common.collate=Collation
 common.columns=Columns
-common.confirmation=Confirmation
 common.confirmation-request=Exit without saving changes?
+common.confirmation=Confirmation
 common.connect.button=Connect
-common.connection=Connection
 common.connecting=Connecting...
+common.connection=Connection
 common.constraints=Constraints
 common.copy.button=Copy
 common.copy=Copy
@@ -35,9 +35,9 @@ common.disconnect.button=Disconnect
 common.domain=DOMAIN
 common.drivers=Drivers
 common.encoding=Encoding
+common.error-message=Error message
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
-common.error-message=Error message
 common.fetched=Count fetched
 common.finish.button=Finish
 common.generate.button=Generate
@@ -334,9 +334,9 @@ preferences.ColumnsResizeable=Columns resizeable
 preferences.Command=Command
 preferences.ConnectAtStartup=Connect at startup
 preferences.ConnectOnDouble-click=Connect on double-click
+preferences.Connection.shutdown.timeout=Timeout shutdown diagnostic
 preferences.Connection=Connection
 preferences.Connections=Connections
-preferences.Connection.shutdown.timeout=Timeout shutdown diagnostic
 preferences.ConvertTabsToSpaces=Convert tabs to spaces
 preferences.CreateDesktopLinkWithRestart=Create desktop link with restart
 preferences.CurrentLineHighlight=Current Line Highlight
@@ -361,7 +361,8 @@ preferences.EditToolBar=Edit Tool Bar
 preferences.EditTools=Edit Tools
 preferences.Editor=Editor
 preferences.EditorAlternativeBackground=Editor alternative background
-preferences.EditorBackground=EditorBackground
+preferences.EditorBackground=Editor Background
+preferences.EditorChristmasMelody=Christmas melody
 preferences.EditorForeground=Editor Foreground
 preferences.EditorSample=EditorSample
 preferences.FetchSize=Fetch size
@@ -712,7 +713,13 @@ CatalogPanel.SchemaName=Schema Name
 CatalogPanel.catalogName=Catalog Name:
 CheckForUpdateNotifier.checkingUpdatesMessage=Checking for updated version
 CheckForUpdateNotifier.checkingUpdatesTitle=Check for update
+CheckForUpdateNotifier.downloadVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\n\nDo you wish to download new version?
+CheckForUpdateNotifier.latestVersionInfoTitle=Latest Version Info
+CheckForUpdateNotifier.newVersionAvailableText=New version {0} available.
+CheckForUpdateNotifier.newVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nClick <a  style=\"color:#3F7ED3\" href=\"{2}\">here</a> to go to the download page.\n\nDo you wish to view the version notes for this release?
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
+CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
+CheckForUpdateNotifier.title=Red Expert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
@@ -739,15 +746,14 @@ ConnectionPanel.Multifactor=Multifactor
 ConnectionPanel.PageSize=Page Size:
 ConnectionPanel.Role=Role:
 ConnectionPanel.SSHTunnel=SSH Tunnel
-ConnectionPanel.path_to_html=org/executequery/gui/browser/resource/ssh-tunnel.html
 ConnectionPanel.ShowPassword.tool-tip=Show the password in plain text
 ConnectionPanel.ShowPassword=Show Password
 ConnectionPanel.Standard=Standard
 ConnectionPanel.Store-container-password=Store container password
-ConnectionPanel.Verify-server-certificate=Verify server certificate
 ConnectionPanel.StorePassword.tool-tip=Store the password with the connection information
 ConnectionPanel.StorePassword=Store Password
 ConnectionPanel.TransactionIsolation=Transaction Isolation
+ConnectionPanel.Verify-server-certificate=Verify server certificate
 ConnectionPanel.addNewDriver=New Driver
 ConnectionPanel.advPropsPanel.text1=Enter any key/value pair properties for this connection
 ConnectionPanel.advPropsPanel.text2=Refer to the relevant JDBC driver documentation for possible entries
@@ -774,6 +780,7 @@ ConnectionPanel.nameField=Connection Name:
 ConnectionPanel.namesToUpperCase=Object names to upper case
 ConnectionPanel.passwordField.tool-tip=Login password
 ConnectionPanel.passwordField=Password:
+ConnectionPanel.path_to_html=org/executequery/gui/browser/resource/ssh-tunnel.html
 ConnectionPanel.portField.tool-tip=Database port number
 ConnectionPanel.portField=Port:
 ConnectionPanel.selectDriver=Select...
@@ -858,6 +865,42 @@ DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
 DockedTabPane.menuItem.minimize=Minimize
 DockedTabPane.menuItem.minimizeAll=Minimize All
+ErdPopupMenu.DatabaseTable.tool-tip=Create a new database table
+ErdPopupMenu.DatabaseTable=Database Table
+ErdPopupMenu.DisplayGrid=Display grid
+ErdPopupMenu.DisplayPageMargin=Display page margin
+ErdPopupMenu.DisplayReferencedKeysOnly=Display referenced keys only
+ErdPopupMenu.FontStyle=Font Style
+ErdPopupMenu.Layout=Layout
+ErdPopupMenu.LineStyle=Line Style
+ErdPopupMenu.New=New
+ErdPopupMenu.Relationship.tool-tip=Create a new table relationship
+ErdPopupMenu.Relationship=Relationship
+ErdPopupMenu.View=View
+ErdPopupMenu.ZoomIn=Zoom In
+ErdPopupMenu.ZoomOut=Zoom Out
+ErdSelectionPanel.availableTables=Available Tables:
+ErdSelectionPanel.selectedTables=Selected Tables:
+ErdToolBarPalette.canvasBg=Canvas background colour
+ErdToolBarPalette.canvasFg=Table background colour for selected or all tables
+ErdToolBarPalette.createTable=Create new table
+ErdToolBarPalette.deleteRelation=Delete selected table relationship
+ErdToolBarPalette.dropTable=Remove selected object(s) from the ERD
+ErdToolBarPalette.erdTitle=Add ERD title
+ErdToolBarPalette.fontStyle=Font
+ErdToolBarPalette.genScripts=Generate SQL CREATE TABLE scripts from ERD
+ErdToolBarPalette.lineStyle=Line style
+ErdToolBarPalette.relation=Create a new table relationship
+ErdToolBarPalette.zoomIn=Zoom in
+ErdToolBarPalette.zoomOut=Zoom out
+ExecuteProcedurePanel.DataType=Data Type
+ExecuteProcedurePanel.Execute=Execute
+ExecuteProcedurePanel.Mode=Mode
+ExecuteProcedurePanel.ObjectName.tool-tip=Select the database object name
+ExecuteProcedurePanel.ObjectName=Object Name:
+ExecuteProcedurePanel.ObjectType.tool-tip=Select the database object type
+ExecuteProcedurePanel.ObjectType=Object Type:
+ExecuteProcedurePanel.Parameter=Parameter
 ExecuteQueryDialog.commit=Commit
 ExecuteQueryDialog.copyError=Copy SQL Return
 ExecuteQueryDialog.copyQuery=Copy Statement
@@ -898,6 +941,8 @@ FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
 GUIUtilities.notAuthorized=not authorized
+GenerateErdPanel.Generate=Generate
+GenerateErdPanel.title=Generate ERD
 GeneratorTestDataPanel.AfterCommit=Commit after
 GeneratorTestDataPanel.Autoincrement=Autoincrement
 GeneratorTestDataPanel.ChooseDirectory=Choose Directory
@@ -937,7 +982,6 @@ GeneratorTestDataPanel.getFromList=Get from list
 GeneratorTestDataPanel.getFromOtherTable=Get from other table
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
-GrantManagerPanel.Refresh=Refresh
 GrantManagerPanel.AllObjects=All Objects
 GrantManagerPanel.CancelFill=Cancel waiting fill 
 GrantManagerPanel.ColumnsOf=Columns Of 
@@ -951,6 +995,7 @@ GrantManagerPanel.Non-grantedOnly=Non-granted Only
 GrantManagerPanel.Object=Object
 GrantManagerPanel.PrivelegesFor=Privileges For
 GrantManagerPanel.Procedures=Procedures
+GrantManagerPanel.Refresh=Refresh
 GrantManagerPanel.Roles=Roles
 GrantManagerPanel.ShowSystemTables=Show System Tables
 GrantManagerPanel.Tables=Tables
@@ -1050,9 +1095,24 @@ QueryEditor.MaxRows=Max Rows:
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
 QueryEditor.StopOnError=Stop on error
 QueryEditor.TransactionIsolationLevel=Transaction isolation level:
-QueryEditor.title=Query Editor
-QueryEditor.script=script
 QueryEditor.autocommit=Auto-commit={0}
+QueryEditor.script=script
+QueryEditor.title=Query Editor
+QueryEditorPopupMenu.auto-complete-database-objects=Auto-complete database objects
+QueryEditorPopupMenu.auto-complete-keywords=Auto-complete keywords
+QueryEditorPopupMenu.cancelQuery=Cancel Query
+QueryEditorPopupMenu.clear-output-log=Clear Output Log
+QueryEditorPopupMenu.commit=Commit
+QueryEditorPopupMenu.editor.display.toolsPanel=Display tools panel
+QueryEditorPopupMenu.editor.execute.remove.comments=Remove comments for execution
+QueryEditorPopupMenu.execute-as-block-command=Execute as Single Statement
+QueryEditorPopupMenu.execute-selection-command=Execute Selected Query Text
+QueryEditorPopupMenu.execute=Execute
+QueryEditorPopupMenu.preferences=Preferences...
+QueryEditorPopupMenu.results.table.row.numbers=Show row number header 
+QueryEditorPopupMenu.rollback=Rollback
+QueryEditorPopupMenu.use-single-resut-set-tab=Use single resut set tab
+QueryEditorResultsPanel.title=Output
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
 QueryEditorToolBar.comment-lines-command=Comment/Uncomment
 QueryEditorToolBar.commit-command=Commit all changes since last commit/rollback
@@ -1078,7 +1138,6 @@ QueryEditorToolBar.shift-text-right-command=Shift line/selection right
 QueryEditorToolBar.sql-history-command=SQL command history
 QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
 QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
-QueryEditorResultsPanel.title=Output
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
@@ -1092,6 +1151,12 @@ ScrollingTabPane.menuItem.closeOther=Close Others
 SimpleButtonsPanel.cancel=Cancel
 SimpleButtonsPanel.ok=OK
 SystemOutputPanel.title=Output Console
+TableDataTab.Commit=Commit
+TableDataTab.DeleteRecord=Delete record
+TableDataTab.FetchAll=Fetch all
+TableDataTab.InsertRecord=Insert record
+TableDataTab.Rollback=Rollback
+TableDataTab.labelExecuting=Executing query for data...
 TableSelectionPanel.catalog=Catalog:
 TableSelectionPanel.connection=Connection:
 TableSelectionPanel.schema=Schema:
@@ -1188,17 +1253,3 @@ WindowAddUser.error.failed-edit-user=Failed to edit user {0}
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
-QueryEditorPopupMenu.execute=Execute
-QueryEditorPopupMenu.execute-selection-command=Execute Selected Query Text
-QueryEditorPopupMenu.execute-as-block-command=Execute as Single Statement
-QueryEditorPopupMenu.cancelQuery=Cancel Query
-QueryEditorPopupMenu.commit=Commit
-QueryEditorPopupMenu.rollback=Rollback
-QueryEditorPopupMenu.preferences=Preferences...
-QueryEditorPopupMenu.clear-output-log=Clear Output Log
-QueryEditorPopupMenu.auto-complete-keywords=Auto-complete keywords
-QueryEditorPopupMenu.auto-complete-database-objects=Auto-complete database objects
-QueryEditorPopupMenu.editor.execute.remove.comments=Remove comments for execution
-QueryEditorPopupMenu.editor.display.toolsPanel=Display tools panel
-QueryEditorPopupMenu.results.table.row.numbers=Show row number header 
-QueryEditorPopupMenu.use-single-resut-set-tab=Use single resut set tab
