Add support for jaybird 4 with batch operations. See #56492

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -740,6 +740,8 @@ ConnectionPanel.DatabaseRegistration.message=Register a created database?
 ConnectionPanel.DatabaseRegistration=Database Registration
 ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
+ConnectionPanel.UseNewAPI.tool-tip=Use new Native OO API to connect
+ConnectionPanel.UseNewAPI=Use Native API
 ConnectionPanel.IsolationLevel=Isolation Level:
 ConnectionPanel.JDBCProperties=JDBC Properties
 ConnectionPanel.Multifactor=Multifactor
@@ -798,6 +800,7 @@ ConnectionPanel.urlField.tool-tip=The full JDBC URL for this connection (optiona
 ConnectionPanel.urlField=JDBC URL:
 ConnectionPanel.userField.tool-tip=Login user name
 ConnectionPanel.userField=User Name:
+ConnectionPanel.warning.useNewAPI=New API is available with Jaybird 4 driver only and newer.
 ConnectionPanel.warning.DataSourceException.level-change=The selected isolation level could not be applied.\nThe JDBC driver returned:\n\n
 ConnectionPanel.warning.level-change=The specified driver for this connection does not support transactions.\nThis feature is unavailable.
 ConnectionProgressDialog.connectionLabel=Establishing connection to {0}
@@ -950,6 +953,7 @@ GeneratorTestDataPanel.ChooseFile=Choose File
 GeneratorTestDataPanel.Column=Column
 GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
 GeneratorTestDataPanel.CountRecords=Count Records
+GeneratorTestDataPanel.BatchCount=Batch Size
 GeneratorTestDataPanel.Delimiter=Delimiter
 GeneratorTestDataPanel.FromFile=From File
 GeneratorTestDataPanel.FromTextArea=From Text Area
@@ -965,6 +969,8 @@ GeneratorTestDataPanel.MinByte=Min Byte
 GeneratorTestDataPanel.MinLength=Max Length
 GeneratorTestDataPanel.Name=Name
 GeneratorTestDataPanel.OutputLog=Output to the errors log
+GeneratorTestDataPanel.useBatchesBox=Use batches to insert data
+GeneratorTestDataPanel.printBatchStateBox=Print states for batch execution
 GeneratorTestDataPanel.Random=Random
 GeneratorTestDataPanel.Selected=Selected/Deselected
 GeneratorTestDataPanel.Source=Source
