Fix conditions to use batch operations. See #56492

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -740,8 +740,8 @@ ConnectionPanel.DatabaseRegistration.message=Register a created database?
 ConnectionPanel.DatabaseRegistration=Database Registration
 ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
-ConnectionPanel.UseNewAPI.tool-tip=Use new Native OO API to connect
-ConnectionPanel.UseNewAPI=Use Native API
+ConnectionPanel.UseNewAPI.tool-tip=Use new Native OO API to connect (Allows to use batch operations in the data generator)
+ConnectionPanel.UseNewAPI=Use Native OO API (Allows to use batch operations in the data generator)
 ConnectionPanel.IsolationLevel=Isolation Level:
 ConnectionPanel.JDBCProperties=JDBC Properties
 ConnectionPanel.Multifactor=Multifactor
