--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -739,8 +739,8 @@ ConnectionPanel.DatabaseRegistration.message=Зарегистрировать с
 ConnectionPanel.DatabaseRegistration=Регистрация базы данных
 ConnectionPanel.EncryptPassword.tool-tip=Зашифровать пароль при сохранении
 ConnectionPanel.EncryptPassword=Зашифровать пароль
-ConnectionPanel.UseNewAPI.tool-tip=Использовать новое OO API для соединения
-ConnectionPanel.UseNewAPI=Использовать новое OO API
+ConnectionPanel.UseNewAPI.tool-tip=Использовать новое OO API для соединения (Позволяет использовать пакетные операции в генераторе данных)
+ConnectionPanel.UseNewAPI=Использовать новое OO API (Позволяет использовать пакетные операции в генераторе данных)
 ConnectionPanel.IsolationLevel=Уровень изоляции:
 ConnectionPanel.JDBCProperties=Свойства JDBC
 ConnectionPanel.Multifactor=Многофакторная
